THF-569: Translations to other languages

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,27 +1,29 @@
 {
   "locale": "ru",
-  "lang-code": "Language Selector In Russian",
-  "global_menu_title": "Information in other languages",
-  "site_name": "Employment services",
-  "site_title": "Helsinki Employment Services",
-  "link_copied": "Link copied",
-  "text_print": "Print",
-  "text_print_section": "Print this section",
-  "skip-to-main-content": "Skip to main content",
+  "lang-code": "Меню языков по-русски",
+  "choose_language": "Выбрать язык сайта",
+  "global_menu_title": "Информация на других языках",
+  "other_languages": "Открыть меню информации на других языках",
+  "site_name": "Служба занятости",
+  "site_title": "Служба занятости Хельсинки",
+  "link_copied": "Ссылка скопирована",
+  "text_print": "Распечатать",
+  "text_print_section": "Распечатать этот разделn",
+  "skip-to-main-content": "Прямо к содержанию",
   "navigation": {
-    "button_text": "E-Services",
+    "button_text": "Самообслуживание",
     "button_link": "https://asiointi.mol.fi/omaasiointi/",
-    "title_aria_label": "Helsinki: Employment services",
-    "navigate_to_page": "Navigate to page",
-    "frontpage": "Front page",
-    "breadcrumb_label": "Breadcrumb",
-    "theme_dropdown": "Other languages",
+    "title_aria_label": "Хельсинки: Служба занятости",
+    "navigate_to_page": "Перейти на страницу",
+    "frontpage": "Главная страница",
+    "breadcrumb_label": "Цепочка навигации",
+    "theme_dropdown": "Другие языки",
     "search_label": "Search",
     "search_placeholder": "Search for content"
   },
   "search": {
-    "filter": "Filter events",
-    "clear": "Clear filter",
+    "filter": "Фильтровать события",
+    "clear": "Снять выбор",
     "title": "Search the Employment Services website",
     "page_title": "Search",
     "input_label": "What are you looking for?",
@@ -31,33 +33,33 @@
     "result_text": "Search results",
     "item_link_text": "Open search result",
     "pagination_aria_label": "Page numbers",
-    "entity_type_event": "Event",
-    "entity_type_article": "News",
+    "entity_type_event": "Событие",
+    "entity_type_article": "Новость",
     "loading_suggestions": "Loading suggestions",
-    "group_description": "You can select one of the following filters at a time"
+    "group_description": "Вы можете выбрать из следующих фильтров несколько раз"
   },
   "list": {
-    "load_more": "Show more",
-    "read_more": "Read more",
-    "read_more_blogs": "Read all blogs",
-    "read_more_news": "Read all news",
+    "load_more": "Показать больше",
+    "read_more": "Узнать подробнее",
+    "read_more_blogs": "Читать все блоги",
+    "read_more_news": "Читать все новости",
     "blog_url": "/en/blog",
     "events_url": "/en/event",
     "show_all_news": "Show all news",
     "news_url": "/en/news",
-    "results_text": "search results",
-    "show_all_events": "Show all events",
+    "results_text": "результат поиска",
+    "show_all_events": "Отобразить все события",
     "events_page_url": "/en/current-matters/events",
-    "no_events": "No upcoming events on this topic.",
-    "event_title": "Event",
-    "event_link": "Event link to"
+    "no_events": "Нет предстоящих событий по этой теме.",
+    "event_title": "Событие",
+    "event_link": "Нет результатов поиска"
   },
   "event": {
-    "remote_event": "Remote event",
-    "info_url_text": "Event homepage",
-    "info_url_text_teams": "Open Teams-event",
-    "cancelled_text": "Cancelled",
-    "field_offers_info_url": "Sign up"
+    "remote_event": "Мероприятия по удаленной связи",
+    "info_url_text": "Домашние страницы событий,",
+    "info_url_text_teams": "Открыть событие через Teams",
+    "cancelled_text": "Отменено",
+    "field_offers_info_url": "Зарегистрировано"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
@@ -73,18 +75,18 @@
     "cookie_settings": "Cookie settings"
   },
   "map": {
-    "location": "Location",
-    "new_window": "Open the map in a new window"
+    "location": "Местонахождение",
+    "new_window": "Открыть карту в новом окне"
   },
   "unit": {
-    "email": "Email",
-    "contact_information": "Contact information",
-    "visit_address": "Visiting address",
-    "open_hours": "Opening hours",
-    "phone_service": "Phone service",
-    "postal_address": "Postal address",
-    "more_info": "See opening hours and contact details",
-    "accessibility_information": "Accessibility information"
+    "email": " Электронная почта",
+    "contact_information": "Контактная информация",
+    "visit_address": "Фактический адрес,",
+    "open_hours": "Время работы",
+    "phone_service": "Обслуживание по телефону",
+    "postal_address": "Почтовый адрес",
+    "more_info": "Смотреть время работы и контактную информацию,",
+    "accessibility_information": "Информация о доступной среде для маломобильных групп населения"
   },
   "consent_info": {
     "title": "Feedback buttons cannot be displayed",
