--- a/public/locales/so/common.json
+++ b/public/locales/so/common.json
@@ -1,27 +1,29 @@
 {
   "locale": "so",
-  "lang-code": "Language Selector In Somali",
-  "global_menu_title": "Information in other languages",
-  "site_name": "Employment services",
-  "site_title": "Helsinki Employment Services",
-  "link_copied": "Link copied",
-  "text_print": "Print",
-  "text_print_section": "Print this section",
-  "skip-to-main-content": "Skip to main content",
+  "lang-code": "Liiska luqad xulashada ee af-soomaaliga",
+  "choose_language": "Dooro luqadda bogga",
+  "global_menu_title": "Macluumaadka ku qoran luqadaha kale",
+  "other_languages": "Macluumaadka ka fur liiska xulashada luqadaha kale",
+  "site_name": "Adeegyada shaqo helitaanka",
+  "site_title": "Adeegyada shaqo helitaanka ee Helsinki",
+  "link_copied": "Linkiga waa la koobiyay",
+  "text_print": "Daabac",
+  "text_print_section": "Qaybtaan soo daabac",
+  "skip-to-main-content": "Si toos ah dulucda ama waxyaabaha uu ka kooban yahay",
   "navigation": {
-    "button_text": "E-Services",
+    "button_text": "Arrimahaaga gaarka ah",
     "button_link": "https://asiointi.mol.fi/omaasiointi/",
-    "title_aria_label": "Helsinki: Employment services",
-    "navigate_to_page": "Navigate to page",
-    "frontpage": "Front page",
-    "breadcrumb_label": "Breadcrumb",
-    "theme_dropdown": "Other languages",
+    "title_aria_label": "Helsinki: adeegyada shaqo helitaanka",
+    "navigate_to_page": "U gudub bogga",
+    "frontpage": "Bogga hore",
+    "breadcrumb_label": "Jajabka ama buruburka wadada",
+    "theme_dropdown": "Luqadaha kale",
     "search_label": "Search",
     "search_placeholder": "Search for content"
   },
   "search": {
-    "filter": "Filter events",
-    "clear": "Clear filter",
+    "filter": "Kala saar dhacdooyinka",
+    "clear": "Ka Saar doorashada",
     "title": "Search the Employment Services website",
     "page_title": "Search",
     "input_label": "What are you looking for?",
@@ -31,33 +33,34 @@
     "result_text": "Search results",
     "item_link_text": "Open search result",
     "pagination_aria_label": "Page numbers",
-    "entity_type_event": "Event",
-    "entity_type_article": "News",
+    "entity_type_event": "Dhacdo",
+    "entity_type_article": "War",
     "loading_suggestions": "Loading suggestions",
-    "group_description": "You can select one of the following filters at a time"
+    "group_description": "Dhowr mar ayaad dooran kartaa kuwaan soo socda ee la kala saaray"
   },
   "list": {
-    "load_more": "Show more",
-    "read_more": "Read more",
-    "read_more_blogs": "Read all blogs",
-    "read_more_news": "Read all news",
+    "load_more": "Wax badan muuji",
+    "read_more": "Wax badan akhri",
+    "read_more_blogs": "Akhri boloogyada oo dhan",
+    "read_more_news": "Akhri warka oo dhan",
     "blog_url": "/en/blog",
     "events_url": "/en/event",
     "show_all_news": "Show all news",
     "news_url": "/en/news",
-    "results_text": "search results",
-    "show_all_events": "Show all events",
+    "results_text": "natiijada baaritaanka",
+    "show_all_events": "Muuji dhacdooyinka oo dhan,",
     "events_page_url": "/en/current-matters/events",
     "no_events": "No upcoming events on this topic.",
-    "event_title": "Event",
-    "event_link": "Event link to"
+    "event_title": "Dhacdo",
+    "event_link": "Linkiga dhacadada",
+    "result_zero": "Ma jiraan wax natiijooyin baaritaanka ah"
   },
   "event": {
-    "remote_event": "Remote event",
-    "info_url_text": "Event homepage",
-    "info_url_text_teams": "Open Teams-event",
-    "cancelled_text": "Cancelled",
-    "field_offers_info_url": "Sign up"
+    "remote_event": "Dhacdo ama munaasabad dhanka internetka ah",
+    "info_url_text": "Bogga internetka ee munaasabadda ama dhacdada",
+    "info_url_text_teams": "Waxaad furtaa munaasabadda Teams-ka",
+    "cancelled_text": "Waa la baajiyay",
+    "field_offers_info_url": "Is diiwaangeli"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
@@ -73,18 +76,18 @@
     "cookie_settings": "Cookie settings"
   },
   "map": {
-    "location": "Location",
-    "new_window": "Open the map in a new window"
+    "location": "Meesha ama goobta",
+    "new_window": "Meesha ama goobta"
   },
   "unit": {
-    "email": "Email",
-    "contact_information": "Contact information",
-    "visit_address": "Visiting address",
-    "open_hours": "Opening hours",
-    "phone_service": "Phone service",
-    "postal_address": "Postal address",
-    "more_info": "See opening hours and contact details",
-    "accessibility_information": "Accessibility information"
+    "email": "Iimeyl",
+    "contact_information": "Macluumaadka la soo xiriiridda",
+    "visit_address": "Cinwaanka la tago",
+    "open_hours": "Wakhtiyada furnaanshaha",
+    "phone_service": "Adeegga telefoonka",
+    "postal_address": "Cinwaanka boostada",
+    "more_info": "Eeg ama fiiri wakhtiyada furnaanshaha iyo macluumaadka la soo xiriiridda",
+    "accessibility_information": "Xannibaad la’aanta macluumaadka"
   },
   "consent_info": {
     "title": "Feedback buttons cannot be displayed",
