--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -1,27 +1,29 @@
 {
   "locale": "uk",
-  "lang-code": "Language Selector In Ukrainian",
-  "global_menu_title": "Information in other languages",
-  "site_name": "Employment services",
-  "site_title": "Helsinki Employment Services",
-  "link_copied": "Link copied",
-  "text_print": "Print",
-  "text_print_section": "Print this section",
-  "skip-to-main-content": "Skip to main content",
+  "lang-code": "Мова меню: українська",
+  "choose_language": "Виберіть мову сайту",
+  "global_menu_title": "Інформація іншими мовами",
+  "other_languages": "Відкрити меню інформації на інших мовах",
+  "site_name": "Служба зайнятості",
+  "site_title": "Служба зайнятості міста Гельсінкі",
+  "link_copied": "Посилання скопійовано",
+  "text_print": "Роздрукувати",
+  "text_print_section": "Роздрукуйте цей розділ",
+  "skip-to-main-content": "Безпосередньо до змісту",
   "navigation": {
-    "button_text": "E-Services",
+    "button_text": "Сервіс Oma asiointi",
     "button_link": "https://asiointi.mol.fi/omaasiointi/",
-    "title_aria_label": "Helsinki: Employment services",
-    "navigate_to_page": "Navigate to page",
-    "frontpage": "Front page",
-    "breadcrumb_label": "Breadcrumb",
-    "theme_dropdown": "Other languages",
+    "title_aria_label": "Гельсінкі: Служба зайнятості",
+    "navigate_to_page": "Перейти на сторінку",
+    "frontpage": "Головна сторінка",
+    "breadcrumb_label": "Навігаційна стежка",
+    "theme_dropdown": "Інші мови",
     "search_label": "Search",
     "search_placeholder": "Search for content"
   },
   "search": {
-    "filter": "Filter events",
-    "clear": "Clear filter",
+    "filter": "Фільтрувати заходи",
+    "clear": "Прибрати з виділеного",
     "title": "Search the Employment Services website",
     "page_title": "Search",
     "input_label": "What are you looking for?",
@@ -31,33 +33,34 @@
     "result_text": "Search results",
     "item_link_text": "Open search result",
     "pagination_aria_label": "Page numbers",
-    "entity_type_event": "Event",
-    "entity_type_article": "News",
+    "entity_type_event": "Захід",
+    "entity_type_article": "Новина",
     "loading_suggestions": "Loading suggestions",
-    "group_description": "You can select one of the following filters at a time"
+    "group_description": "Ви можете вибрати кілька з наведених нижче фільтрів одночасно"
   },
   "list": {
-    "load_more": "Show more",
-    "read_more": "Read more",
-    "read_more_blogs": "Read all blogs",
-    "read_more_news": "Read all news",
+    "load_more": "Показати більше",
+    "read_more": "Читати додатково",
+    "read_more_blogs": "Читати всі блоги",
+    "read_more_news": "Читати всі новини",
     "blog_url": "/en/blog",
     "events_url": "/en/event",
     "show_all_news": "Show all news",
     "news_url": "/en/news",
-    "results_text": "search results",
-    "show_all_events": "Show all events",
+    "results_text": "результат пошуку",
+    "show_all_events": "Показати всі заходи",
     "events_page_url": "/en/current-matters/events",
-    "no_events": "No upcoming events on this topic.",
-    "event_title": "Event",
-    "event_link": "Event link to"
+    "no_events": "Найближчі заходи на цю тему відсутні.",
+    "event_title": "Захід",
+    "event_link": "Посилання на захід",
+    "result_zero": "Немає результатів пошуку"
   },
   "event": {
-    "remote_event": "Remote event",
-    "info_url_text": "Event homepage",
-    "info_url_text_teams": "Open Teams-event",
-    "cancelled_text": "Cancelled",
-    "field_offers_info_url": "Sign up"
+    "remote_event": "Дистанційний захід",
+    "info_url_text": "Домашня сторінка заходу",
+    "info_url_text_teams": "Відкрийте захід через Teams",
+    "cancelled_text": "Скасовано",
+    "field_offers_info_url": "Зареєструватися"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
@@ -73,18 +76,18 @@
     "cookie_settings": "Cookie settings"
   },
   "map": {
-    "location": "Location",
-    "new_window": "Open the map in a new window"
+    "location": "Місцезнаходження",
+    "new_window": "Відкрийте карту в новому вікні"
   },
   "unit": {
-    "email": "Email",
-    "contact_information": "Contact information",
-    "visit_address": "Visiting address",
-    "open_hours": "Opening hours",
-    "phone_service": "Phone service",
-    "postal_address": "Postal address",
-    "more_info": "See opening hours and contact details",
-    "accessibility_information": "Accessibility information"
+    "email": "Електронна пошта",
+    "contact_information": "Контактна інформація",
+    "visit_address": "Адреса для відвідувачів",
+    "open_hours": "Години прийому",
+    "phone_service": "Телефонна служба",
+    "postal_address": "Поштова адреса",
+    "more_info": "Перегляньте години роботи та контактну інформацію",
+    "accessibility_information": "Інформація про доступність"
   },
   "consent_info": {
     "title": "Feedback buttons cannot be displayed",
