--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -62,7 +62,9 @@
     "cancelled_text": "Inställt",
     "field_offers_info_url": "Bli Medlem",
     "provider": "Arrangör",
-    "publisher": "Utgivare"
+    "publisher": "Utgivare",
+    "showAll": "Visa Alt",
+    "showLess": "Dölj",
   },
   "news": {
     "news": "Nyhet",
@@ -100,5 +102,12 @@
     "title": "Feedbackknappar kan inte visas",
     "text": "För att använda denna funktion måste du acceptera cookies från webbplatsen. Du kan ge feedback på den här sidan genom att aktivera statistikrelaterade cookies.",
     "button": "Ändra inställningarna för cookies"
-  }
+  },
+  "Sun": "Sön",
+  "Mon": "Mån",
+  "Tue": "Tis",
+  "Wed": "Ons",
+  "Thu": "Tor",
+  "Fri": "Fre",
+  "Sat": "Lör"
 }
