--- a/public/locales/so/common.json
+++ b/public/locales/so/common.json
@@ -48,9 +48,9 @@
     "show_all_news": "Show all news",
     "news_url": "/en/news",
     "results_text": "natiijada baaritaanka",
-    "show_all_events": "Muuji dhacdooyinka oo dhan,",
+    "show_all_events": "Muuji dhacdooyinka oo dhan",
     "events_page_url": "/en/current-matters/events",
-    "no_events": "No upcoming events on this topic.",
+    "no_events": "Ma jirto wax dhacdooyin ah oo mowduucaan la xiriira.",
     "event_title": "Dhacdo",
     "event_link": "Linkiga dhacadada",
     "result_zero": "Ma jiraan wax natiijooyin baaritaanka ah"
