THF-535: adding headr to the relatedEvent component and filtering current event off

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -64,7 +64,8 @@
     "provider": "Organizer information",
     "publisher": "Publisher information",
     "showAll": "Show All",
-    "showLess": "Hide"
+    "showLess": "Hide",
+    "Other_times": "Other times of the event"
   },
   "news": {
     "news": "News",
@@ -102,6 +103,9 @@
     "title": "Feedback buttons cannot be displayed",
     "text": "To use this feature, you must accept cookies from the site. You can provide feedback on this page by enabling statistics-related cookies.",
     "button": "Change cookie settings"
+  },
+  "datetime": {
+    "time": "at"
   },
   "Sun": "Sun",
   "Mon": "Mon",
