--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -65,6 +65,7 @@
     "publisher": "Utgivare",
     "showAll": "Visa Alt",
     "showLess": "Dölj",
+    "Other_times": "Andra evenemangstider"
   },
   "news": {
     "news": "Nyhet",
