THF-533: sideContent module

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -65,7 +65,8 @@
     "publisher": "Publisher information",
     "showAll": "Show All",
     "showLess": "Hide",
-    "Other_times": "Other times of the event"
+    "Other_times": "Other times of the event",
+    "languages": "Languages"
   },
   "news": {
     "news": "News",
