--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -65,7 +65,8 @@
     "publisher": "Utgivare",
     "showAll": "Visa Alt",
     "showLess": "Dölj",
-    "Other_times": "Andra evenemangstider"
+    "Other_times": "Andra evenemangstider",
+    "languages": "Språk"
   },
   "news": {
     "news": "Nyhet",
