THF-604: translation fix

--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -106,7 +106,7 @@
     "button": "Muokkaa evästeasetuksia"
   },
   "datetime": {
-    "time": "kl."
+    "time": "klo"
   },
   "Sun": "Su",
   "Mon": "Ma",
