UK to UA langcode changes.

--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -1,5 +1,5 @@
 {
-  "locale": "uk",
+  "locale": "ua",
   "lang-code": "Мова меню: українська",
   "choose_language": "Виберіть мову сайту",
   "global_menu_title": "Інформація іншими мовами",
