Hide events and news link on shortlist components if url is not set.

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -44,12 +44,12 @@
     "read_more_blogs": "Читать все блоги",
     "read_more_news": "Читать все новости",
     "blog_url": "/en/blog",
-    "events_url": "/en/event",
+    "events_url": null,
     "show_all_news": "Show all news",
-    "news_url": "/en/news",
+    "news_url": null,
     "results_text": "результат поиска",
     "show_all_events": "Отобразить все события",
-    "events_page_url": "/en/current-matters/events",
+    "events_page_url": null,
     "no_events": "Нет предстоящих событий по этой теме.",
     "event_title": "Событие",
     "event_link": "Ссылка на событие"
