--- a/public/locales/so/common.json
+++ b/public/locales/so/common.json
@@ -44,12 +44,12 @@
     "read_more_blogs": "Akhri boloogyada oo dhan",
     "read_more_news": "Akhri warka oo dhan",
     "blog_url": "/en/blog",
-    "events_url": "/en/event",
+    "events_url": null,
     "show_all_news": "Show all news",
-    "news_url": "/en/news",
+    "news_url": null,
     "results_text": "natiijada baaritaanka",
     "show_all_events": "Muuji dhacdooyinka oo dhan",
-    "events_page_url": "/en/current-matters/events",
+    "events_page_url": null,
     "no_events": "Ma jirto wax dhacdooyin ah oo mowduucaan la xiriira.",
     "event_title": "Dhacdo",
     "event_link": "Linkiga dhacadada",
