--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -44,12 +44,12 @@
     "read_more_blogs": "Читати всі блоги",
     "read_more_news": "Читати всі новини",
     "blog_url": "/en/blog",
-    "events_url": "/en/event",
+    "events_url": null,
     "show_all_news": "Show all news",
-    "news_url": "/en/news",
+    "news_url": null,
     "results_text": "результат пошуку",
     "show_all_events": "Показати всі заходи",
-    "events_page_url": "/en/current-matters/events",
+    "events_page_url": null,
     "no_events": "Найближчі заходи на цю тему відсутні.",
     "event_title": "Захід",
     "event_link": "Посилання на захід",
